--- a/styles/utilities/_buttons.module.scss
+++ b/styles/utilities/_buttons.module.scss
@@ -18,7 +18,7 @@
 	background-size: 100% px_rem(3), 0 px_rem(3);
 	background-position: 100% 100%, 0 100%;
 	background-repeat: no-repeat;
-	transition: background-size 400ms;
+	transition: background-size 300ms ease-in-out;
 	&:hover {
 		background-size: 0 px_rem(3), 100% px_rem(3);
 	}
